intTests/test_type_errors/err031.log.good
 Loading file "err031.saw"
 Parse error at err031.saw:7:14-7:17: Unexpected `Int'
FAILED
